src/test/deca/context/invalid/testWrongClassSelection.deca
// Desciption : Selection sur une variable qui n'est pas une instance de classe
{
    int a;
    a.x = 2;
}
